# kickstarter-project-analysis

./: .buildinfo  .flake8  .gitignore  CONTRIBUTING.md  README.html  README.md  genindex.html  how-to-poetry.md  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  todo.md
.github/: README.md  issue-labeler-config.yml  labeler.yml
.github/workflows/: ci.yml  issue-labeler.yml  labeler.yml  pr-regex-labeler.yml
_modules/: index.html  utils.html
_sources/: index.rst
_sources/how-to/: poetry.md
_sources/notebooks/: analyse-exploratoire.ipynb  regression_models.ipynb  supervised-regression.ipynb
dashboards/: README.md
data/: README.md  kickstarter_1.csv  kickstarter_2.csv  kickstarter_3.csv  kickstarter_4.csv
docs/: how-to-poetry.md  how-to-python-env-vscode.md  todo.md
docs/source/: README.md  conf.py  index.rst  notebooks
docs/source/docstring/: modules.rst
docs/source/how-to/: python-env-vscode.md
docstring/: constants.html  modules.html  utils.html
how-to/: poetry.html  python-env-vscode.html
notebooks/: README.html  README.md  analyse-exploratoire.html  analyse-exploratoire.ipynb  analyse_exploratoire.html  non-parametric-estimation.html  non-parametric-estimation.ipynb  non_parametric_estimation.html  parametric-estimation.html  parametric-estimation.ipynb  parametric_estimation.html  regression-models.html  regression-models.ipynb  regression_models.html  supervised-regression.html  supervised-regression.ipynb
src/: README.md  analyse_exploratoire.ipynb  column_names.py  constants.py  modelisation.ipynb  parametric-estimation.ipynb  parametric_estimation.ipynb  utils.py
src/data/: data_dtypes.py  load_data.ipynb  load_data.py
src/modelisation/: README.md
src/modelisation/regression/: README.md
src/modelisation/univariate/parametric/: models.py  plot.py
src/models/univariate/: README.md
src/models/univariate/non_parametric/: models.py
src/models/univariate/parametric/: models.py  plot.py
src/notebooks/: analyse-exploratoire.ipynb  analyse_exploratoire.ipynb  modelisation.ipynb  non-parametric-estimation.ipynb  non_parametric_estimation.ipynb  parametric-estimation.ipynb  parametric_estimation.ipynb  regression-models.ipynb  regression_models.ipynb  supervized-regression.ipynb  supervized_regression.ipynb
