[tool.poetry]
name = "kickstarter-project-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
jupyter = "^1.0.0"
statsmodels = "^0.14.0"
scikit-learn = "^1.3.1"
seaborn = "^0.13.0"
lifelines = "^0.27.8"
papermill = "^2.5.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.10.0"}
isort = "^5.12.0"
nbqa = "^1.7.0"
nbdev = "^2.3.13"
nb-clean = "^3.1.0"
flake8 = "^6.1.0"
flake8-annotations = "^3.0.1"
flake8-bugbear = "^23.9.16"
pandas-vet = "^2023.8.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
