[tool.poetry]
name = "kickstarter-project-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
pandas = "^2.1.1"
jupyter = "^1.0.0"
statsmodels = "^0.14.0"
scikit-learn = "^1.3.1"
seaborn = "^0.13.0"
lifelines = "^0.27.8"
papermill = "^2.5.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.10.0"}
isort = "^5.12.0"
nbqa = "^1.7.0"
nbdev = "^2.3.13"
nb-clean = "^3.1.0"
flake8 = "^6.1.0"
flake8-annotations = "^3.0.1"
flake8-bugbear = "^23.9.16"
pandas-vet = "^2023.8.2"
poethepoet = "^0.24.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poe]
  [tool.poe.tasks.format]
  help = "Format the files"
  sequence = [
    { cmd = "black ." },
    { cmd = "isort ." },
    { cmd = "nbqa isort . --float-to-top" },
  ]

  [tool.poe.tasks.lint]
  help = "Lint the files"
  sequence = [
    { cmd = "flake8 ." },
    { cmd = "nbqa flake8 ." },
  ]

  [tool.poe.tasks.nbcheck]
  help = "Check notebooks for metadata"
  cmd = "nb-clean check . --preserve-cell-outputs --remove-empty-cells"

  [tool.poe.tasks.nbclean]
  help = "Clean notebook metadatas"
  cmd = "nbdev_clean --fname ."

  [tool.poe.tasks.nbrun]
  help = "Run notebooks to see if they work"
  shell = """
    RED='\\033[0;31m'
    NC='\\033[0m' # No Color

    for input_file in $(find . -type f -name "*.ipynb"); do
      echo "${RED}Notebook: ${input_file}${NC}"
      papermill "$input_file" temp.ipynb
    done

    rm temp.ipynb
  """
