[project]
name = "kickstarter-project-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "lifelines>=0.30.0",
    "matplotlib>=3.10.1",
    "notebook>=7.3.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "xgboost>=2.1.4",
]

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]
